--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,11 @@
   background-color: #C0C0C0;
 }
 
+.combined-table-cell{
+  text-align:center;
+  vertical-align: middle !important;
+}
+
 footer {
   background-color: #555;
   color: white;
